<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SeVira</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="bem_vindo">Seja Bem Vindo!</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="opcao">Escolha uma opção!</string>
    <string name="footer">Se Vira 2.0</string>
    <string name="criar">Criar</string>
    <string name="alterar">Atualizar</string>
    <string name="apagar">Apagar</string>
    <string name="alarme">Agendar</string>
    <string name="comprar">Comprar</string>
    <string name="enviar">Google Calendar</string>
    <string name="title_activity_lista">ListaActivity</string>
    <string name="dados">Sem Dados</string>
    <string name="title_activity_navegador">Navegador</string>
    <string name="title_activity_sub_category_itens">SubCategoryItensActivity</string>
    <string name="todo">TODO</string>
    <string name="title_activity_lista_item">ListaItemActivity</string>
    <string name="title_activity_create_list">CreateListActivity</string>
    <string name="nome">Título:</string>
    <string name="data">Data:</string>
    <string name="salvar">Salvar</string>
    <string name="continuar">Salvar e Novo</string>
    <string name="cancelar">Cancelar</string>
    <string name="title_activity_create_item">CreateItemActivity</string>
    <string name="produto">Nome:</string>
    <string name="quantidade">Quantidade:</string>
    <string name="valor">Valor:</string>
    <string name="lista">Digite o nome da lista!</string>
    <string name="item">Digite detalhes da compra!</string>
    <string name="title_activity_create_item_sc">CreateItemSCActivity</string>
    <string name="title_activity_lista_item_sc">ListaItemSCActivity</string>
    <string name="title_activity_lista_sc">ListaSCActivity</string>
    <string name="title_activity_edit_lista">EditListaActivity</string>
    <string name="title_activity_edit_lista_item">EditListaItemActivity</string>
    <string name="plus">Item</string>
    <string name="delete">Apagar</string>
    <string name="title_activity_lista_item_list">ListaItemListActivity</string>
    <string name="title_activity_apagar_lista">ApagarListaActivity</string>
    <string name="title_activity_comprar_lista">ComprarListaActivity</string>
    <string name="title_activity_comprar_lista_valor">ComprarListaValorActivity</string>
    <string name="title_activity_cadastrar_valor">CadastrarValorActivity</string>
    <string name="qtde">Qtde:</string>
    <string name="valor2">Valor:</string>
    <string name="title_activity_agendar_data">AgendarDataActivity</string>
    <string name="title_activity_agendar_lista">AgendarListaActivity</string>
    <string name="data2">Escolha a data:</string>
    <string name="title_activity_agendar_hora">AgendarHoraActivity</string>
     <string name="hora2">Escolha a hora:</string>

</resources>
