<!-- Your package folder -->
<br.com.especializacao.sevira2.DashboardLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1"
    android:background="#FFFFFF" >

    <!--  Criar Button -->
    <Button
        android:id="@+id/btn_new_lista"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/add"
        android:text="@string/criar"/>
      
    <!--  Alterar Button -->
    <Button
        android:id="@+id/btn_edit_lista"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/refresh"
        android:text="@string/alterar" />
  
    <!--  Apagar Button -->
    <Button
        android:id="@+id/btn_del_lista"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/remove"
        android:text="@string/apagar" />
  
    <!--  Alarme Button -->
    <Button
        android:id="@+id/btn_alarm_lista"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/clock"
        android:text="@string/alarme" />
 
    
    <!--  Comprar Button -->
    <Button
        android:id="@+id/btn_buy_lista"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/full"
        android:text="@string/comprar" />
 
   <!--  App Button -->
    <Button
        android:id="@+id/btn_home"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/home"
        android:text="@string/app_name" />
 
</br.com.especializacao.sevira2.DashboardLayout>