<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <com.markupartist.android.widget.ActionBar
        android:id="@+id/actionbar"
        style="@style/ActionBar" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="374dp"
        android:background="@color/white"
        android:orientation="vertical" >

     
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical" 
        android:layout_marginLeft="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="2dp"
          android:scaleType="centerInside">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
    
            android:layout_marginTop="10dp"
            android:textColor="#ff29549f"
            android:textStyle="bold" 
            android:layout_gravity="center"
            android:text="@string/data" />

        <DatePicker
         	 android:id="@+id/datePicker1"
     	   android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_marginTop="10dp"
    	   
    	    android:calendarViewShown="false" 
    	    android:layout_gravity="center"
      />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_ok"
            style="@style/DashboardButton"
            android:drawableTop="@drawable/ok"
            android:text="@string/salvar" />
        
       
        <Button
            android:id="@+id/btn_cancel"
            style="@style/DashboardButton"
            android:layout_marginLeft="5dp"
            android:drawableTop="@drawable/close"
            android:text="@string/cancelar" />
    </LinearLayout>
   
    </LinearLayout>
    <!-- Include Footer -->

    <include layout="@layout/footer_layout" />

</LinearLayout>